# cmakeLearn

./: CMakeLists.txt  README.md  config.h.in
include/: student.h
libs/: CMakeLists.txt
libs/myMath/include/: myMath.h
libs/myMath/src/: myMath.c
libs/work/include/: work.h
libs/work/src/: work.c
src/: main.c  student.c
