#set(myMathSrc "myMath/src/myMath.c")
aux_source_directory(myMath/src/ myMathSrc)
#set(workSrc "work/src/work.c")
aux_source_directory(work/src workSrc)

set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
if (USE_MYMATH)
    add_library(myMath STATIC ${myMathSrc})
endif (USE_MYMATH)
add_library(work SHARED ${workSrc})
install (TARGETS work DESTINATION lib)