#set(myMathSrc "myMath/src/myMath.c")
aux_source_directory(myMath/src/ myMathSrc)
#set(workSrc "work/src/work.c")
aux_source_directory(work/src workSrc)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
if (USE_MYMATH)
    add_library(myMath STATIC ${myMathSrc})
endif (USE_MYMATH)
if(WIN32)
    add_definitions(-D_WIN32_)
    set(LIB_POS bin)
else()
    set(LIB_POS lib)
endif()
add_library(work SHARED ${workSrc})
install (TARGETS work DESTINATION ${LIB_POS})
